--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container">
           <div class="hero-content">
             <h1 class="h1 section-title">
-              
+              Rajeev (machphy)
               Where techies realize their true potential is <span class="span"> where </span> they flourish the most.</h1>
             <p class="hero-text">
               "Enroll now and unlock your full potential!"
