--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     
         
         <a href="https://github.com/machphy" class="btn has-before">
-          <span class="span">Enrol Now</span>
+          <span class="span">Enrol Now in new subjects </span>
           <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
         </a>
         <button class="header-action-btn" aria-label="open menu" data-nav-toggler>
