--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
               Where techies realize their true potential is <span class="span"> where </span> they flourish the most.</h1>
             <p class="hero-text">
               "Enroll now and unlock your full potential!"
+              it is good for you
             </p>
             <a href="#" class="btn has-before">
               <span class="span">Enroll now</span>
