--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   <a href="#" class="card-title">Facebook <br> Inc. (now known as Meta) - Social media and technology</a>
                 </h3>
                 <p class="card-text">
-                  know about compony
+                  know about my compony
                 </p>
                 <span class="card-badge">MORE</span>
               </div>
